<resources>
    <string name="app_name">Numerical Integration</string>
    <!-- main strings -->
    <string name="bt_apply">APPLY</string>
    <string name="n0">0</string>
    <string name="n1">1</string>
    <string name="label_fx">f(x):</string>
    <string name="label_f_x2">x^2+</string>
    <string name="label_f_x">x+</string>
    <string name="opt_menu_01">設定</string>
    <string name="opt_menu_02">終了</string>

    <!-- preference strings -->
    <string name="preference_title">設定</string>

    <string name="list_01_title">区間分割設定</string>
    <string name="list_01_summary">計算対象区間の分割数を設定します</string>
    <string name="edit_02_title">最小x値</string>
    <string name="edit_02_summary">計算対象の最小x値を設定します</string>
    <string name="edit_03_title">最大x値</string>
    <string name="edit_03_summary">計算対象の最大x値を設定します</string>
    <string name="title_activity_settings">Settings</string>

    <string name="list01">list_01_key</string>
    <string name="edit01">edit_01_key</string>
    <string name="edit02">edit_02_key</string>

</resources>
