<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_title">
        <ListPreference
            android:key="checkbox_01_key"
            android:title="@string/list_01_title"
            android:summary="@string/list_01_summary"
            android:entries="@array/entries_list_preference"
            android:entryValues="@array/entryvalues_list_preference"
            android:dialogTitle="@string/list_01_title" />
        <EditTextPreference
            android:key="checkbox_02_key"
            android:title="@string/edit_02_title"
            android:summary="@string/edit_02_summary"
            android:inputType="number"
            android:maxLength="5" />
        <EditTextPreference
            android:key="checkbox_02_key"
            android:title="@string/edit_03_title"
            android:summary="@string/edit_03_summary"
            android:inputType="number"
            android:maxLength="5" />
    </PreferenceCategory>
</PreferenceScreen>